// Copyright (C) 2018 go-gamc authors
//
// This file is part of the go-gamc library.
//
// the go-gamc library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-gamc library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-gamc library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

package corepb;

message ContractAuthority{
    bytes address = 1;
    string method = 2;
    string access_type = 3;
}

message Permission{
    string auth_category = 1;
    repeated bytes auth_message = 2;
}

message Contract {
    bytes address = 1;
    repeated string methods = 2;
    string version = 3;
}

message Account{
    bytes   address = 1;
    bytes   balance = 2;
    bytes   frozen_fund = 3;
    bytes   pledge_fund = 4;
    uint64  nonce = 5;
    bytes   vars_hash = 6;
    bytes  credit_index = 7;
    repeated Permission permissions = 8;
}
